# gui-speedtest

./: .gitignore  README.md  gui_speedtest.py  gui_window.py  install.sh  pyproject.toml  reinstall.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
backends/: __init__.py  base.py  cloudflare.py  librespeed.py  mlab.py  ookla.py  ovh.py
data/: io.github.mmhfarooque.GuiSpeedTest.desktop  io.github.mmhfarooque.GuiSpeedTest.metainfo.xml
debian/: changelog  control  copyright  rules
mobile/: MACOS-PLAN.md  README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/io/github/mmhfarooque/speedtest_mobile/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/backends/: backend_error.dart  cloudflare.dart  progress_event.dart  speed_test_backend.dart
mobile/lib/models/: connection_info.dart  latency_result.dart  speed_result.dart
mobile/lib/state/: test_runner.dart
mobile/lib/ui/: app.dart  error_banner.dart  home_page.dart  log_viewer_page.dart  start_button.dart
mobile/lib/ui/cards/: card_base.dart  connection_card.dart  download_card.dart  jitter_card.dart  metric_value.dart  ping_card.dart  upload_card.dart
mobile/lib/utils/: browser_ua.dart  format_speed.dart  log_manager.dart
mobile/macos/Runner/: MainFlutterWindow.swift
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/scripts/: build-dmg.sh
mobile/test/: format_speed_test.dart  latency_result_test.dart  speed_result_test.dart
packaging/arch/: PKGBUILD
packaging/flatpak/: io.github.mmhfarooque.GuiSpeedTest.yaml
packaging/rpm/: gui-speedtest.spec
scripts/: build-appimage.sh  build-deb.sh  install-ookla.sh
snap/: snapcraft.yaml
