[build-system]
# Staying on >=61 until Ubuntu 26.04 (setuptools 75+) is the baseline —
# then migrate to PEP 639 (SPDX license string + license-files), which
# requires setuptools>=77. Ubuntu 24.04 ships setuptools 68.x and rejects
# the SPDX form at build time.
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-speedtest"
version = "1.6.2"
description = "GUI + CLI internet speed test for Linux with multiple backends (Cloudflare, Ookla, M-Lab NDT, LibreSpeed)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Mahmud Farooque", email = "farooque7@gmail.com" }]
keywords = ["speedtest", "network", "bandwidth", "cloudflare", "ookla", "gtk4", "libadwaita"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]

# Runtime deps are all stdlib. Optional extras enable specific backends.
dependencies = []

[project.optional-dependencies]
# >=1.8 closes CVE-2024-5569 (ReDoS in Sec-WebSocket-Protocol parser,
# patched in websocket-client 1.8.0). <3 pins below an unreleased major
# so a future 2.x can't silently break the M-Lab backend.
mlab = ["websocket-client>=1.8,<3"]
gui = []  # GTK4/libadwaita come from system packages (python3-gi, gir1.2-adw-1)
all = ["websocket-client>=1.8,<3"]

[project.scripts]
gui-speedtest = "gui_speedtest:main"

[project.urls]
Homepage = "https://github.com/mmhfarooque/gui-speedtest"
Repository = "https://github.com/mmhfarooque/gui-speedtest"
Issues = "https://github.com/mmhfarooque/gui-speedtest/issues"

[tool.setuptools]
py-modules = ["gui_speedtest", "gui_window"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backends*"]
exclude = ["tests*", "build*", "dist*"]

# Note: we deliberately do NOT use [tool.setuptools.data-files] to install
# the .desktop file and icon. That key is deprecated and places files outside
# the wheel's package tree, which plays badly with pip + user site-packages.
#
# For native packages (.deb, .rpm, AppImage) the packaging layer installs the
# data/ files directly — see debian/rules. Pip-installed users get the CLI
# and GUI binaries but not desktop-environment registration; they can launch
# `gui-speedtest --gui` from a terminal.
